--- a/src/main/resources/aoc.css
+++ b/src/main/resources/aoc.css
@@ -15,3 +15,10 @@
 .param-key {
 	font-weight: bold;
 }
+
+.product-text-field {
+	background: #fff;
+	border: none;
+	background-color:white;
+	font-weight: bold;
+}
